test/core/errors/indexed_offsets_error/zs/arithmetic_mult_operator_in_array_expression_error.zs
package arithmetic_mult_operator_in_array_expression_error;

struct ArithmeticMultOperatorInArrayExpressionError
{
    uint32 offsets[];
offsets[@index * 1]:
    string fields[];
};
